<?xml version="1.0"?>
<package>
  <name>cartesian_controller</name>
  <version>0.0.0</version>
  <description>The cartesian_controller package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="shloksobti@todo.todo">shloksobti</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <!--<build_depend>roscpp</build_depend>-->
  <!--<build_depend>rospy</build_depend>-->
  <!--<build_depend>std_msgs</build_depend>-->
  <!--<build_export_depend>roscpp</build_export_depend>-->
  <!--<build_export_depend>rospy</build_export_depend>-->
  <!--<build_export_depend>std_msgs</build_export_depend>-->
  <!--<exec_depend>roscpp</exec_depend>-->
  <!--<exec_depend>rospy</exec_depend>-->
  <!--<exec_depend>std_msgs</exec_depend>-->

  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>robot_controllers_interface</build_depend>
  <build_depend>dmp</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>robot_controllers_interface</run_depend>
  <run_depend>dmp</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
